# SQL-OpenAI-Parsing

./: .gitignore  README.md  config_data.py  launcher.py  notes.txt  pyproject.toml  requirements.txt  tests.py
data/output/: PullData_RussellUS2_IndexSecurityValue_prc.yaml  SP_CRUDs_example.yaml  dbo.PullData_RussellUS2_IndexValue_prc.yaml
data/output/input/: datafeedOut_generateChangeFilesAddress_prc.sql
mermaid/: mermaid_sandbox.md
modules/: data_classes.py  integrator.py  llm_communicator.py  mermaid_diagram.py  mermaider.py  pipeline.py  view_parser.py
modules/sql/: sql_config.py  sql_config.yaml  sql_engine.py
modules/sql_modules/: sql_config.py  sql_config.yaml  sql_engine.py  sql_string_helper.py  utils.py
modules/sql_modules/scripts/: get_dbs.sql  get_dependent_objects.sql  get_module_def.sql  get_modules_def.sql  get_sql_object.sql
prompt/: example.txt  parse_sp_prompt.txt
prompt/examples/: sp_example.sql  sp_example.yaml
tests/: __init__.py  test_crud_chain.py  test_integrator.py  test_llm.py  test_mmg_gen.py  test_sql.py  test_sql_glot.py  test_string_parser.py  test_view_parsing.py
tests/test_sql_scripts/: test_view_setup.sql
